<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="question_mark">\?</string>
    <string name="yes">Yes</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="skill_iq_score">skill IQ Score,</string>
    <string name="kenya"> Kenya</string>
    <string name="damilola_okafor">Damilola Okafor</string>
    <string name="learning_hours">learning hours,</string>
</resources>